--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -23,8 +23,10 @@
     transition: 0.5s;
 }
 .creator {
+    font-size: .85rem;
     cursor: pointer;
     padding: .5rem .5rem .5rem .5rem;
+    text-decoration: none;
 }
 .creator:hover {
     color: rgb(240,240,240)!important;
@@ -52,7 +54,7 @@ ul li{
     list-style: none;
 }
 
-ul li a{
+ul li > *{
     padding: 10px;
     display: inline-block;
     font-size: 2em;
