--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -7,7 +7,7 @@
     display: grid;
     place-items: center;
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
 }
 
 .home-page-initial-content{
@@ -28,6 +28,12 @@
     filter: grayscale(1);
     margin-left: 0rem;
     margin-right: 1rem;
+}
+.explore-button:hover .explore-link{color: white;}
+.explore-link{
+    color: black;
+    text-decoration: none;
+    transition: .15s;
 }
 
 .slide{
@@ -83,6 +89,7 @@
     animation-duration: 2s;
     animation-iteration-count: infinite;
     animation-timing-function:ease-in-out;
+    transition: .15s;
 
 }
 @keyframes moveArrow {
