--- a/client/src/index.css
+++ b/client/src/index.css
@@ -50,3 +50,16 @@ body {
   top: -50px;
   width: 100%;
 }
+
+.sign-out{
+  position: absolute!important;
+  bottom: 10px!important;
+  right: 10px!important;
+  cursor: pointer;
+  color: black;
+  padding: .5rem;
+}
+.sign-out:hover{
+  color: white;
+  background-color: black;
+}
