--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,3 +66,10 @@ body {
   color: white;
   background-color: black;
 }
+
+.loading{
+  width: 100%;
+  height: 80vh;
+  display: grid;
+  place-items: center;
+}
