--- a/client/src/pages/Product/Product.css
+++ b/client/src/pages/Product/Product.css
@@ -2,7 +2,7 @@
     height: 100%;
     overflow-x: hidden;
     display: grid;
-    grid-template-rows: 75% 25%;
+    grid-template-rows: 65% 35%;
     
 }
 #product-image{
@@ -13,12 +13,41 @@
 #product-info{
     width: 100%;
     text-align: center;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-auto-flow: row;
+    place-content: center;
+    grid-template-rows: 1fr 5fr;
+}
+#product-count{
+    align-self: center;
+}
+#product-sizing{
+    display: grid;
+    justify-content: center;
+    align-content: start;
+    width: 100%;
+    grid-auto-flow: column;
+}
+.product-sizing-item{
+    border: 1px solid black;
+    width: fit-content;
+    padding: 3px 5px 4px 5px;
+    cursor: pointer;
+    transition: .15s;
+}
+.product-sizing-item.active{
+    background-color: black;
+    color: white;
+}
+.product-sizing-item:hover{
+    background-color: rgb(75,75,75 );
+    color: white;
+}
+.product-sizing-item-left{
+    border-right: none;
 }
 .product-price{
     align-self: center;
-    justify-self: end;
 }
 
 .item{
