--- a/client/src/pages/ProductList/ProductList.css
+++ b/client/src/pages/ProductList/ProductList.css
@@ -17,20 +17,52 @@
     -webkit-box-shadow: 10px 10px 0px 0px rgba(10,10,10,0.75);
     -moz-box-shadow: 10px 10px 0px 0px rgba(10,10,10,0.75);
 }
+.unavailable-product{
+    background-color: rgb(30,30,30);
+    box-shadow: 10px 10px 0px 0px rgba(200,200,200,0.95);
+    -webkit-box-shadow: 10px 10px 0px 0px rgba(200,200,200,0.95);
+    -moz-box-shadow: 10px 10px 0px 0px rgba(200,200,200,0.95);
+}
+.unavailable-product > * {
+    color: rgb(220,220,220)!important;
+}
+.unavailable-product:hover{
+    background-color: rgb(40,40,40)!important;
+}
+.unavailable-product-image{
+    filter: opacity(0.6);
+}
 .product:hover {
     background-color: rgb(220,220,220);
 }
 .product-image{
-    padding-top: 1rem;
     height: 100%;
     object-fit: cover;
     width: 100%;
+    padding-top: 1rem;
     padding-left: 1rem;
     padding-right: 1rem;
     margin-bottom: 1rem;
+    grid-area: content;
+}
+.product-image-parent{
+    width: 100%;
+    height: 100%;
+    grid-template-columns: 100%;
+    grid-template-rows: 100%;
+    display: grid;
+    grid-template-areas: "content";
+    place-content: center;
+    text-align: center;
 }
 .product-info{
     display: flex;
     flex-direction: column;
     text-align: center;
+}
+.product-image-text{
+    grid-area: content;
+    place-self: center;
+    filter: opacity(1.1);
+
 }
