--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -3,5 +3,15 @@
     width: 100vw;
     display: grid;
     align-content: center;
-    padding: 3rem;
+    padding: 1.5rem;
+}
+.order-names{
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.profile-page-order{
+    display: grid;
+    grid-template-columns: 70% auto auto;
+    font-size: .9rem;
 }
