--- a/client/src/pages/CreatorPortal/Upload/Upload.css
+++ b/client/src/pages/CreatorPortal/Upload/Upload.css
@@ -1,3 +1,10 @@
+@media screen and (min-width: 1224px) {
+    #upload{
+        width: 50%!important;
+        justify-self: center!important;
+    }
+}
+
 #upload{
     height: auto;
     padding: 3rem;
