--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -1,3 +1,10 @@
+@media screen and (min-width: 1224px){
+    #about{
+        width: 40%!important;
+        place-self: center!important;
+    }
+}
+
 #about{
     height: 80vh;
     padding: 0rem 3rem 2rem 3rem;
