--- a/client/src/pages/Contact/Contact.css
+++ b/client/src/pages/Contact/Contact.css
@@ -1,3 +1,10 @@
+@media screen and (min-width: 1224px){
+    #contact{
+        width: 60%!important;
+        place-self: center!important;
+    }
+}
+
 #contact{
     height: 90vh;
     width: 100%;
