--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -79,8 +79,8 @@
     display: inline-block;
     width: 10px;
     height: 10px;
-    border-top: 2px solid #000;
-    border-right: 2px solid #000;
+    border-top: 2px solid rgb(255, 255, 255);
+    border-right: 2px solid rgb(255, 255, 255);
     transform: rotate(45deg);
     position: relative;
     bottom: 1px;
