--- a/client/src/pages/PaymentDetails/PaymentDetails.css
+++ b/client/src/pages/PaymentDetails/PaymentDetails.css
@@ -1,3 +1,10 @@
+@media screen and (min-width: 1224px){
+    #payment-details{
+        width: 50%!important;
+        place-self: center!important;
+    }
+}
+
 #payment-details{
     height: auto;
     width: 100%;
