--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -1,3 +1,9 @@
+@media screen and (min-width: 1224px) {
+    .home-page-initial-content{
+        width: 25%!important;
+    }
+}
+
 #home-page{
     display: grid;
     width: 100vw;
@@ -15,6 +21,7 @@
     top: 40%;
     display: flex;
     flex-direction: column;
+    width: 50%;
 }
 
 .socials{
