--- a/client/src/pages/CreatorPortal/EditProduct/EditProduct.css
+++ b/client/src/pages/CreatorPortal/EditProduct/EditProduct.css
@@ -15,6 +15,10 @@
     }
 }
 
+#edit-image-order{
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+}
 #edit-product{
     height: fit-content;
     padding: 0rem 1rem 2rem 1rem;
