--- a/client/src/pages/CreatorPortal/Products/Products.css
+++ b/client/src/pages/CreatorPortal/Products/Products.css
@@ -2,6 +2,8 @@
     #creator-portal-product-list{
         display: grid;
         grid-template-columns: 25% 25% 25% 25%;
+        column-gap: 1rem;
+        row-gap: 1rem;
     }
 }
 
