--- a/client/src/pages/CreatorPortal/Upload/Upload.css
+++ b/client/src/pages/CreatorPortal/Upload/Upload.css
@@ -31,6 +31,14 @@
     height: 100%;
     object-fit: cover;
 }
+#image-order{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 25% 25% 25% 25%;
+}
+.image-order-element{
+    
+}
 .no-outline{
     outline: none!important;
 }
