Socials icons styling

--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -34,6 +34,11 @@
     margin-left: 0rem;
     margin-right: 1rem;
 }
+.socials-icon-right{
+    padding: 2px;
+    margin-left: 1rem;
+    margin-right: 0rem;
+}
 .explore-button:hover .explore-link{color: white;}
 .explore-link{
     color: black;
@@ -62,8 +67,8 @@
     position: relative;
     color: rgb(240,240,240);
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 1.5rem 2rem 2rem 2rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 1.5rem 1rem 2rem 1rem!important;
     border: 1px solid rgb(240,240,240);
 }
 .slide-creator{
