Added first and last name to shipping details

--- a/client/src/pages/CreatorPortal/Profile/CreatorProfile.css
+++ b/client/src/pages/CreatorPortal/Profile/CreatorProfile.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 1224px){
     #creator-profile{
-        width: 4 0%!important;
+        width: 40%!important;
         place-self: center!important;
     }
 }
