--- a/client/src/pages/CreatorPortal/Products/Products.css
+++ b/client/src/pages/CreatorPortal/Products/Products.css
@@ -2,8 +2,15 @@
     #creator-portal-product-list{
         display: grid;
         grid-template-columns: 25% 25% 25% 25%;
-        column-gap: 1rem;
         row-gap: 1rem;
+    }
+    .product{
+        margin-right: 1rem;
+    }
+}
+@media screen and (min-width: 700px) and (max-width: 1223px) {
+    .product{
+        height: 80vh!important;
     }
 }
 
