--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -54,7 +54,11 @@
     text-decoration: none;
     transition: .15s;
 }
-
+.desktop-slide-images{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    position: absolute;
+}
 .slide{
     width: 100vw;
     height: 100vh;
@@ -69,8 +73,12 @@
     z-index: -100;
     position: absolute;
 }
+.slide-image.desktop{
+    width: 33.33vw!important;
+    position: initial!important;
+}
 .slide-info{
-    z-index: 0;
+    z-index: 20;
     max-width: 90vw;
     width: min-content;
     position: relative;
@@ -134,6 +142,7 @@
     transform: rotate(180deg);
     height: 6rem;
     cursor: pointer;
+    z-index: 10;
 }
 .arrow-down-container {
     display: flex;
@@ -144,6 +153,7 @@
     margin-bottom: 3rem;
     height: 6rem;
     cursor: pointer;
+    z-index: 10;
 }
 .chevron {
     position: absolute;
