--- a/client/src/pages/ProductList/ProductList.css
+++ b/client/src/pages/ProductList/ProductList.css
@@ -1,13 +1,33 @@
-@media screen and (min-width: 1224px){
+@media screen and (min-width: 1300px){
     #products{
         grid-template-columns: 25% 25% 25% 25%!important;
+        column-gap: 1.5rem;
+        row-gap: 1.5rem;
+        padding: 1rem 4rem 1rem 4rem!important;
+    }
+}
+@media screen and (max-width: 1300px) and (min-width: 900px) {
+    #products{
+        grid-template-columns: 50% 50%!important;
         text-align: center!important;
-        column-gap: 1rem;
-        row-gap: 1rem;
+        column-gap: 1.5rem;
+        row-gap: 1.5rem;
+        padding: 1rem 4rem 1rem 4rem!important;
     }
     .no-prods-available{
         column-span: 4;
         text-align: center;
+    }
+}
+@media screen and (min-width: 800px){
+    #products{
+        padding: 1rem 4rem 1rem 4rem!important;
+        width: 100vw;
+    }
+}
+@media screen and (min-width: 700px){
+    .product{
+        height: 50vh!important;
     }
 }
 
@@ -58,7 +78,7 @@
     -moz-box-shadow: 10px 10px 0px 0px rgba(200,200,200,0.95);
 }
 .product:hover {
-    background-color: rgb(220,220,220);
+    background-color: rgb(200,200,200);
 }
 .product-image{
     height: 100%;
