--- a/client/src/pages/Product/Product.css
+++ b/client/src/pages/Product/Product.css
@@ -46,18 +46,15 @@
     padding-right: 10px;
 }
 #product-parent{
-    height: 100%;
+    height: 90vh;
+    overflow-y: hidden;
     overflow-x: hidden;
     display: grid;
     grid-template-rows: 65% 35%;
     
 }
-#product-image{
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
 #product-info{
+    margin-top: 10px;
     width: 100%;
     text-align: center;
     display: grid;
@@ -99,9 +96,22 @@
 }
 
 .item{
+    height: 100%;
     width: 100vw;
-    /* height: 50vh; */
+    display: grid;
 }
-.carousel{
+/* .carousel{
     height: auto!important;
+} */
+#product-image{
+    object-fit: cover;
+    place-self: center;
+    width: 100%;
+    height: 100%;
 }
+.custom-carousel-classses{
+    align-self: start;
+    justify-self: center;
+    height: 100%!important;
+}
+.slider-list, .slider-slide { height: 100%!important; }
