--- a/client/src/components/Cart/Cart.css
+++ b/client/src/components/Cart/Cart.css
@@ -1,22 +1,42 @@
-@media screen and (min-width: 1224px) {
+@media screen and (max-width: 700px) {
     .cart-button{
-        border-radius: 0px!important;
-        padding: 7px 10px 6px 13px!important;
+        right: 0!important;
+    }
+}
+@media screen and (max-width: 600px) {
+    .cart-button{
+        right: 5px!important;
+        top: 5px!important;
+        background-color: rgb(30,30,30)!important;
     }
 }
 
 .cart-button{
+    border-radius: 0px!important;
     width: fit-content;
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    padding: 5px 10px 3px 13px;
-    background-color: black;
-    border-radius: 5px;
+    /* position: absolute; */
+    top: 0px;
+    /* right: 5vw; */
+    padding: 7px 10px 6px 13px!important;
+    /* padding: 5px 10px 3px 13px; */
+    background-color: rgb(60,60,60);
     color: white;
     cursor: pointer;
     transition: .15s;
     z-index: 199;
+}
+.cart-button-lone{
+    background-color: rgb(50,50,50);
+    color: white;
+    cursor: pointer;
+    transition: .15s;
+    z-index: 199;
+    width: fit-content;
+    height: fit-content;
+    padding: .6rem .8rem;
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 .cart-button:hover{
     background-color: rgb(50,50,50);
@@ -25,5 +45,4 @@
     margin-left: 10px;
     margin-bottom: 5px;
     position: relative;
-    border-radius: 5px;
 }
