--- a/client/src/pages/ProductList/ProductList.css
+++ b/client/src/pages/ProductList/ProductList.css
@@ -18,10 +18,6 @@
     .product{
         margin-right: 2rem!important;
     }
-    .no-prods-available{
-        column-span: 4;
-        text-align: center;
-    }
 }
 @media screen and (min-width: 800px){
     #products{
@@ -33,6 +29,11 @@
     .product{
         height: 50vh!important;
     }
+}
+.no-prods-available{
+    text-align: center;
+    grid-column-start: 1;
+    grid-column-end: 20;
 }
 #products-page{
     margin-top: 10px;
@@ -48,14 +49,61 @@
     grid-template-rows: 80% 20%;
     place-items: center;
     overflow: hidden;
-    padding: .5rem;
+    padding: .5rem 0 .5rem 0;
     transition: .5s;
     cursor: pointer;
     background-color: rgb(230,230,230);
-    box-shadow: 10px 10px 0px 0px rgba(10,10,10,0.75);
+    /* box-shadow: 10px 10px 0px 0px rgba(10,10,10,0.75);
     -webkit-box-shadow: 10px 10px 0px 0px rgba(10,10,10,0.75);
-    -moz-box-shadow: 10px 10px 0px 0px rgba(10,10,10,0.75);
+    -moz-box-shadow: 10px 10px 0px 0px rgba(10,10,10,0.75); */
+    animation: shadow-pop-br 0.3s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
 }
+@keyframes boxShadowAnimation {
+    0% {
+        box-shadow: 10px 10px 0px 0px rgba(190, 46, 46, 0.75);
+        -webkit-box-shadow: 10px 10px 0px 0px rgba(190, 46, 46, 0.75);
+        -moz-box-shadow: 10px 10px 0px 0px rgba(190, 46, 46, 0.75);
+    }
+    20% {
+        box-shadow: 10px 10px 0px 0px rgba(243, 121, 28, 0.75);
+        -webkit-box-shadow: 10px 10px 0px 0px rgba(243, 121, 28, 0.75);
+        -moz-box-shadow: 10px 10px 0px 0px rgba(243, 121, 28, 0.75);
+    }
+    40% {
+        box-shadow: 10px 10px 0px 0px rgb(226, 223, 61);
+        -webkit-box-shadow: 10px 10px 0px 0px rgb(226, 223, 61);
+        -moz-box-shadow: 10px 10px 0px 0px rgb(226, 223, 61);
+    }
+    60% {
+        box-shadow: 10px 10px 0px 0px rgb(129, 216, 111);
+        -webkit-box-shadow: 10px 10px 0px 0px rgb(129, 216, 111);
+        -moz-box-shadow: 10px 10px 0px 0px rgb(129, 216, 111);
+    }
+    80% {
+        box-shadow: 10px 10px 0px 0px rgb(111, 191, 216);
+        -webkit-box-shadow: 10px 10px 0px 0px rgb(111, 191, 216);
+        -moz-box-shadow: 10px 10px 0px 0px rgb(111, 191, 216);
+    }
+    100% {
+        box-shadow: 10px 10px 0px 0px rgba(190, 46, 46, 0.75);
+        -webkit-box-shadow: 10px 10px 0px 0px rgba(190, 46, 46, 0.75);
+        -moz-box-shadow: 10px 10px 0px 0px rgba(190, 46, 46, 0.75);
+    }
+}
+
+@keyframes shadow-pop-br {
+    0% {
+        box-shadow: 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e;
+        transform: translateX(0) translateY(0);
+    }
+    100% {
+        box-shadow: 1px 1px #3e3e3e, 2px 2px #3e3e3e, 3px 3px #3e3e3e, 4px 4px #3e3e3e, 5px 5px #3e3e3e, 6px 6px #3e3e3e, 7px 7px #3e3e3e, 8px 8px #3e3e3e;
+        transform: translateX(-8px) translateY(-8px);
+    }
+}
+
+
+
 .unavailable-product{
     background-color: rgb(30,30,30);
     box-shadow: 10px 10px 0px 0px rgba(200,200,200,0.95);
