--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,21 +2,25 @@
   font-family  :  'oswald';
   src          :  url('../../public/fonts/Oswald/Oswald-ExtraLight.ttf') format('truetype');
   font-weight  :  lighter;
+  font-variant :   slashed-zero;
 }
 @font-face {
   font-family  :   'oswald';
   src          :   url('../../public/fonts/Oswald/Oswald-Light.ttf') format('truetype');
   font-weight  :   300;
+  font-variant :   slashed-zero;
 }
 @font-face {
   font-family  :   'oswald';
   src          :   url('../../public/fonts/Oswald/Oswald-Regular.ttf') format('truetype');
   font-weight  :   400;
+  font-variant :   slashed-zero;
 }
 @font-face {
   font-family  :   'oswald';
   src          :   url('../../public/fonts/Oswald/Oswald-SemiBold.ttf') format('truetype');
   font-weight  :   700;
+  font-variant :   slashed-zero;
 }
 @font-face {
   font-family  :   'oswald';
