--- a/client/src/pages/CreatorPortal/Upload/Upload.css
+++ b/client/src/pages/CreatorPortal/Upload/Upload.css
@@ -35,8 +35,29 @@
     width: 100%;
     grid-template-columns: 25% 25% 25% 25%;
 }
+.order-image-parent{
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 10vh;
+    grid-template-areas: "order";
+}
+.image-order-picture{
+    width: 100%;
+    height: 100%;
+    grid-area: order;
+    object-fit: cover;
+}
 .image-order-element{
-    
+    grid-area: order;
+    text-align: center;
+    font-size: 1.5rem;
+    background-color: rgba(255,255,255,0.4);
+    border-radius: 0!important;
+}
+.image-order-element:focus{
+    background-color: rgba(255,255,255,0.5)!important;
+    box-shadow: none!important;
+    border: 3px solid black;
 }
 .no-outline{
     outline: none!important;
