--- a/client/src/pages/CreatorPortal/Products/Products.css
+++ b/client/src/pages/CreatorPortal/Products/Products.css
@@ -22,7 +22,7 @@
     width: 100%;
     grid-template-columns: 50% 50%;
     padding: 0rem 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
 }
 .border2{
     border-width: 3px!important;
