--- a/client/src/pages/CreatorPortal/Profile/CreatorProfile.css
+++ b/client/src/pages/CreatorPortal/Profile/CreatorProfile.css
@@ -9,6 +9,8 @@
     width: 100%;
     padding: 2rem;
     top: 0;
+    left: 50%;
+    transform: translate(-50%);
     position: absolute;
 }
 #creator-image-src{
