--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -14,7 +14,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    filter: opacity(0.2);
+    filter: opacity(0.15);
     object-fit: cover;
 }
 #home-page-first-slide{
@@ -24,13 +24,15 @@
     width: 100vw;
     height: 90vh;
 }
-
+#site-title{
+    margin-bottom: 0!important;
+}
 .home-page-initial-content{
     position: relative;
     top: 40%;
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: fit-content;
 }
 
 .socials{
